--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,16 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+select {
+  font-size: 16px; /* Yazı boyutunu büyüt */
+  padding: 8px;    /* İç boşluk ekle */
+  width: 200px;    /* Genişlik ayarla */
+}
+
+input {
+  font-size: 16px; /* Yazı boyutunu büyüt */
+  padding: 8px;    /* İç boşluk ekle */
+  width: 200px;    /* Genişlik ayarla */
+
+}
